tests/specs/ecosystem/geacko/redis_client/2_2_3_beta.test
geacko/redis-client/2.2.3-beta
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS6133 [ERROR]: '#private' is declared but its value is never read.
  #private!: unknown;
  ~~~~~~~~
    at file://<tmpdir>/src/client.ts:6:3

TS6133 [ERROR]: 'connection' is declared but its value is never read.
     */ constructor(connection: Connection){}
                    ~~~~~~~~~~
    at file://<tmpdir>/src/client.ts:57:21

TS6133 [ERROR]: 'cmd' is declared but its value is never read.
     */ send(cmd: Command | CommandBatch): this {
             ~~~
    at file://<tmpdir>/src/client.ts:90:14

TS6133 [ERROR]: 'count' is declared but its value is never read.
     */ readall<T extends Reply[]>(count?: number): Promise<T> {
                                   ~~~~~
    at file://<tmpdir>/src/client.ts:136:36

Found 4 errors.

